--- a/flutter_project_nickname/pubspec.yaml
+++ b/flutter_project_nickname/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_project_nickname
+name: bahamas
 description: descriptions
 publish_to: 'none'
 
@@ -27,13 +27,13 @@ dependencies:
   flutter_overboard: ^3.1.1
   uuid: ^3.0.6
   flutter_native_splash: ^2.1.6
+  flutter_launcher_icons: ^0.9.2
   go_router: ^3.1.0
   # Testing
   mockito: ^5.2.0
   shared_preferences: ^2.0.15
   rive: ^0.9.0
   audioplayers: ^1.0.1
-  in_app_review: ^2.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -41,7 +41,6 @@ dev_dependencies:
   build_runner: ^2.1.10
   freezed: ^2.0.3
   json_serializable: ^6.2.0
-  flutter_launcher_icons: ^0.9.2
 flutter:
   uses-material-design: true
   assets:
