--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.iori.flutter_project_nickname">
+    package="com.iori.bahamas">
    <application
-        android:label="flutter_project_nickname"
+        android:label="bahamas"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
