--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2
   go_router: ^3.1.0
+  in_app_review: ^2.0.4
   # Testing
   mockito: ^5.2.0
   shared_preferences: ^2.0.15
