--- a/flutter/android/app/build.gradle
+++ b/flutter/android/app/build.gradle
@@ -4,12 +4,8 @@ if (localPropertiesFile.exists()) {
     localPropertiesFile.withReader('UTF-8') { reader ->
         localProperties.load(reader)
     }
-}
-
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+} else {
+    throw new GradleException('localPropertiesFile not exist.')
 }
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
@@ -44,6 +40,7 @@ if (project.hasProperty('dart-defines')) {
 
 task copyGoogleServicesJson(type: Copy) {
     from "src/${dartEnvironmentVariables.APP_ENV}/google-services.json"
+    into './'
 }
 
 tasks.whenTaskAdded { task ->
@@ -53,6 +50,14 @@ tasks.whenTaskAdded { task ->
     if (task.name == 'processReleaseGoogleServices') {
         task.dependsOn copyGoogleServicesJson
     }
+}
+
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+} else {
+    throw new GradleException('keystorePropertiesFile not exist.')
 }
 
 apply plugin: 'com.android.application'
@@ -78,6 +83,15 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    defaultConfig {
+        applicationId "com.iori.bahamas"
+        resValue "string", "app_name", dartEnvironmentVariables.APP_NAME
+        minSdkVersion 21 // flutter.minSdkVersion launcher_iconのバグでlocal.propertiesの値が使えないため
+        targetSdkVersion flutter.targetSdkVersion
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
+    }
+
     signingConfigs {
         release {
             keyPassword keystoreProperties['keyPassword']
@@ -85,15 +99,6 @@ android {
             keyAlias keystoreProperties['keyAlias']
             storePassword keystoreProperties['storePassword']
         }
-    }
-
-    defaultConfig {
-        applicationId "com.iori.bahamas"
-        resValue "string", "app_name", dartEnvironmentVariables.APP_NAME
-        minSdkVersion 21 // flutter.minSdkVersion launcher_iconのバグ対応
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
     }
 
     buildTypes {
@@ -107,9 +112,8 @@ android {
             }
         }
     }
-
     play {
-       serviceAccountCredentials = file(keystoreProperties['serviceAccountFile'])
+       serviceAccountCredentials = keystoreProperties['serviceAccountFile'] ? file(keystoreProperties['serviceAccountFile']) : null
     }
 }
 
@@ -119,7 +123,6 @@ flutter {
 
 dependencies {
     def billing_version = "5.0.0"
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // implementation 'com.google.android.gms:play-services-ads:21.0.0'
     implementation "com.android.billingclient:billing:$billing_version"
