--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Continuous Integration (Build)
 
 on:
   pull_request:
@@ -14,39 +14,8 @@ env:
 
 
 jobs:
-  flutter_tests:
-    name: Flutter Tests
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          channel: 'stable'
-      - working-directory: ${{ env.WORKING_FLUTTER_DIRECTORY }}
-        run: flutter pub get
-      - name: Format check
-        working-directory: ${{ env.WORKING_FLUTTER_DIRECTORY }}
-        if: always()
-        run: flutter format ./lib/ ./test/ -n --set-exit-if-changed
-      - name: Lint Check
-        working-directory: ${{ env.WORKING_FLUTTER_DIRECTORY }}
-        if: always()
-        run: flutter analyze
-      - name: Unit Tests
-        working-directory: ${{ env.WORKING_FLUTTER_DIRECTORY }}
-        if: always()
-        run: flutter test test/unit_test.dart
-      - name: Widget Tests
-        working-directory: ${{ env.WORKING_FLUTTER_DIRECTORY }}
-        if: always()
-        run: flutter test test/widget_test.dart
   version_increment:
     name: Flutter Version Increment
-    needs: [flutter_tests]
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -116,7 +85,7 @@ jobs:
           commit_message: '[chore] Auto Version Increment'
   add_git_tag:
     name: Add GitTag
-    needs: [flutter_tests, version_increment]
+    needs: [version_increment]
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -137,7 +106,7 @@ jobs:
           git push origin $(cat TAG_NAME)
   build_appbundle:
     name: Build Flutter AppBundle
-    needs: [flutter_tests, version_increment, add_git_tag]
+    needs: [version_increment, add_git_tag]
     permissions:
       contents: write
     runs-on: ubuntu-latest
