--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iori.bahamas">
    <application
-        android:label="bahamas"
+        android:label="検索メモ"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+            <!-- <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"/> -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
