--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   google_fonts: ^2.3.2
   intl: ^0.17.0
   # Ads
-  google_mobile_ads: ^1.2.0
+  # google_mobile_ads: ^1.2.0
   flutter_overboard: ^3.1.1
   uuid: ^3.0.6
   flutter_native_splash: ^2.1.6
