--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   flutter_overboard: ^3.1.1
   uuid: ^3.0.6
   flutter_native_splash: ^2.1.6
-  flutter_launcher_icons: ^0.9.2
   go_router: ^3.1.0
   in_app_review: ^2.0.4
   # Testing
@@ -41,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.1.10
   freezed: ^2.0.3
   json_serializable: ^6.2.0
+  flutter_launcher_icons: ^0.11.0
 flutter:
   uses-material-design: true
   assets:
@@ -48,6 +48,7 @@ flutter:
     - assets/sounds/
 flutter_icons:
   android: true
+  ios: true
   image_path: "assets/images/ic_launcher.png"
 flutter_native_splash:
   color: "#e9e8e2"
