--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   # Firebase
   firebase_core: ^1.16.0
@@ -33,6 +35,7 @@ dependencies:
   shared_preferences: ^2.0.15
   rive: ^0.9.0
   audioplayers: ^1.0.1
+  logger: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
