--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -11,31 +11,24 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   # Firebase
-  firebase_core: ^1.16.0
-  firebase_auth: ^3.3.17
-  cloud_firestore: ^3.1.14
-  firebase_storage: ^10.2.15
-  firebase_analytics: ^9.1.7
-  flutterfire_ui: ^0.4.0+5
-  cloud_functions: ^3.2.14
+  firebase_core: ^1.21.0
+  firebase_analytics: ^9.3.2
   flutter_riverpod: ^1.0.0
   freezed_annotation: ^2.0.3
   json_annotation: ^4.5.0
-  google_fonts: ^2.3.2
+  # google_fonts: ^2.3.2
   intl: ^0.17.0
   # Ads
   # google_mobile_ads: ^1.2.0
-  flutter_overboard: ^3.1.1
   uuid: ^3.0.6
   flutter_native_splash: ^2.1.6
   go_router: ^3.1.0
-  in_app_review: ^2.0.4
+  # in_app_review: ^2.0.4
   # Testing
   mockito: ^5.2.0
-  shared_preferences: ^2.0.15
-  rive: ^0.9.0
-  audioplayers: ^1.0.1
+  # shared_preferences: ^2.0.15
   logger: ^1.1.0
+  firebase_core_platform_interface: 4.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
