--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   # in_app_review: ^2.0.4
   # Testing
   mockito: ^5.2.0
-  # shared_preferences: ^2.0.15
+  shared_preferences: ^2.0.15
   logger: ^1.1.0
   firebase_core_platform_interface: 4.5.1
 dev_dependencies:
