--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^2.0.15
   logger: ^1.1.0
   firebase_core_platform_interface: 4.5.1
+  isar: ^3.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
