--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bahamas
 description: descriptions
 publish_to: 'none'
-version: 0.7.2+4
+version: 0.9.5+11
 environment:
   sdk: ">=2.17.1 <3.0.0"
 dependencies:
@@ -29,6 +29,15 @@ dependencies:
   shared_preferences: ^2.0.15
   logger: ^1.1.0
   firebase_core_platform_interface: 4.5.1
+  isar: ^3.0.5
+  isar_flutter_libs: ^3.0.5
+  isar_generator: ^3.0.5
+  path: ^1.8.1
+  path_provider: ^2.0.11
+  mocktail: ^0.3.0
+  plugin_platform_interface: ^2.1.3
+  path_provider_platform_interface: ^2.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
