--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   # Firebase
   firebase_core: ^1.21.0
+  firebase_crashlytics: ^2.8.8
   firebase_analytics: ^9.3.2
   flutter_riverpod: ^1.0.0
   freezed_annotation: ^2.0.3
