setting firebase ios project

--- a/flutter/android/app/build.gradle
+++ b/flutter/android/app/build.gradle
@@ -64,6 +64,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: "com.github.triplet.play"
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
